upgrade Django to 3.2.8 add autofield to keep Django happy document DEBUG mode

--- a/virtualphone/env.sample
+++ b/virtualphone/env.sample
@@ -8,3 +8,6 @@ SECRET_KEY=my_secret_key
 TWILIO_DEFAULT_CALLERID=XXXXXXXXXXXXXXXXXXXXXXXXXX
 EMAIL_TO=alice@example.com
 EMAIL_FROM=bob@example.com
+
+# Debugging
+DEBUG=True
